--- a/src/app/liste-courses/liste-courses.component.html
+++ b/src/app/liste-courses/liste-courses.component.html
@@ -1,3 +1,7 @@
-<p>
- composant liste-courses works!
-</p>
+<div class="row">
+  <div class="col-xs-10">
+    <app-liste-courses-editeur></app-liste-courses-editeur>
+    <hr>
+    <p>La liste de course</p>
+  </div>
+</div>
