--- a/src/app/liste-courses/liste-courses.component.html
+++ b/src/app/liste-courses/liste-courses.component.html
@@ -2,6 +2,6 @@
   <div class="col-xs-10">
     <app-liste-courses-editeur></app-liste-courses-editeur>
     <hr>
-    <p>La liste de course</p>
+    <p>ici la liste des courses</p>
   </div>
 </div>
