--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="navbar-header">
       <a href="#" class="navbar-brand">Livre de recettes</a>
     </div>
-    <div class="collapse navbar-collapse">
+    <div class="navbar-default ">
       <ul class="nav navbar-nav">
         <li><a href="#">Recettes</a></li>
         <li><a href="#">Liste de courses</a></li>
