--- a/src/app/livre-recettes/liste-recettes/liste-recettes.component.html
+++ b/src/app/livre-recettes/liste-recettes/liste-recettes.component.html
@@ -1,3 +1,22 @@
 
-<app-element-liste-recette></app-element-liste-recette>
+
+<div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-success">Nouvelle recette</button>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <a href="#" class="list-group-item clearfix">
+      <div class="pull-left">
+        <h4 class="list-group-item-heading">Le Nom de la recette</h4>
+        <p class="list-group-item-text">La Description</p>
+      </div>
+      <span class="pull-right">
+        <img src="" alt="" class="img-responsive" style="max-height: 50px;">
+      </span>
+    </a>
+    <app-element-liste-recette></app-element-liste-recette>
+  </div>
+</div>
 
