--- a/src/app/livre-recettes/liste-recettes/liste-recettes.component.html
+++ b/src/app/livre-recettes/liste-recettes/liste-recettes.component.html
@@ -7,16 +7,19 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <a href="#" class="list-group-item clearfix">
+    <a
+    href="#" class="list-group-item clearfix"
+    *ngFor="let uneRecette of recettes">
+
       <div class="pull-left">
-        <h4 class="list-group-item-heading">Le Nom de la recette</h4>
-        <p class="list-group-item-text">La Description</p>
+        <h4 class="list-group-item-heading">{{uneRecette.nom}}</h4>
+        <p class="list-group-item-text">{{uneRecette.description}}</p>
       </div>
       <span class="pull-right">
         <img src="" alt="" class="img-responsive" style="max-height: 50px;">
       </span>
     </a>
+
     <app-element-liste-recette></app-element-liste-recette>
   </div>
 </div>
-
