--- a/src/app/livre-recettes/detail-recette/detail-recette.component.html
+++ b/src/app/livre-recettes/detail-recette/detail-recette.component.html
@@ -1,3 +1,19 @@
-<p>
-  detail-recette works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" alt="" class="img-responsive">
+  </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">
+      <h1>Nom de la recette</h1>
+    </div>
+  </div>
+
+<div class="row">
+  <div class="col-xs-12">
+      <div class="btn-group">
+        <button type="button" class="btn btn-primary dropdown-toggle">Gestion des recettes <span class="caret"></span></button>
+      </div>
+  </div>
+</div>
