--- a/src/app/livre-recettes/livre.recettes.component.html
+++ b/src/app/livre-recettes/livre.recettes.component.html
@@ -1,4 +1,11 @@
 <div class="row">
-  <div class="col-md-5"><app-liste-recettes></app-liste-recettes></div>
-  <div class="col-md-7"><app-detail-recette></app-detail-recette></div>
+
+  <div class="col-md-5">
+    <app-liste-recettes></app-liste-recettes>
+  </div>
+
+  <div class="col-md-7">
+    <app-detail-recette></app-detail-recette>
+  </div>
+
 </div>
