--- a/src/app/livre-recettes/detail-recette/detail-recette.component.html
+++ b/src/app/livre-recettes/detail-recette/detail-recette.component.html
@@ -13,7 +13,22 @@
 <div class="row">
   <div class="col-xs-12">
       <div class="btn-group">
-        <button type="button" class="btn btn-primary dropdown-toggle">Gestion des recettes <span class="caret"></span></button>
+        <button type="button" class="btn btn-primary dropdown-toggle">Gestion des recettes <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">ajouter des ingredients à la liste de course</a></li>
+          <li><a href="#">Éditer la recette</a></li>
+          <li><a href="#">Éffacer la recette</a></li>
+        </ul>
       </div>
   </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Description
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Ingrédients</div>
 </div>
