--- a/src/app/liste-courses/liste-courses.component.html
+++ b/src/app/liste-courses/liste-courses.component.html
@@ -3,6 +3,6 @@
     <app-liste-courses-editeur></app-liste-courses-editeur>
     <hr>
     <p>ici la liste des courses</p>
-    <a class="list-group-item" style="cursor: pointer;"></a>
+    <a class="list-group-item" style="cursor: pointer;" *ngFor='let unIngredient of ingredients'>{{unIngredient.nom}} ({{unIngredient.quantite}})</a>
   </div>
 </div>
