--- a/src/app/liste-courses/liste-courses-editeur/liste-courses-editeur.component.html
+++ b/src/app/liste-courses/liste-courses-editeur/liste-courses-editeur.component.html
@@ -1,3 +1,23 @@
-<p>
-  liste-courses-editeur works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form >
+      <div class="row">
+        <div class="col-sm-5 form-group">
+          <label for="Nom">Nom</label>
+          <input type="text" id="nom" class="form-control">
+        </div>
+        <div class="col-sm-2 form-group">
+          <label for="Quantité">Quantité</label>
+          <input type="number" id="quantite" class="form-control">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 btn-toolbar">
+          <button class="btn btn-success" type="submit">Ajouter</button>
+          <button class="btn btn-danger" type="button">Supprimer</button>
+          <button class="btn btn-primary" type="button">Éffacer</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
