--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="navbar-default ">
       <ul class="nav navbar-nav">
-        <li><a href="#">Recettes</a></li>
-        <li><a href="#">Liste de courses</a></li>
+        <li><a href="#" (click)="siSelectionne('menuRecettes')">Recettes</a></li>
+        <li><a href="#"(click)="siSelectionne('menuListe-course')">Liste de courses</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
